--- a/index.html
+++ b/index.html
@@ -147,9 +147,10 @@
 validateStep(0);
 
 function finish() {
-  const extras = Array.from(document.querySelectorAll('input[name="extras"]:checked')).map(i=>i.value);
+  const extras = Array.from(document.querySelectorAll('input[name="extras"]:checked')).map(i => i.value);
   const payload = {
     action: 'booking',
+    timestamp: Math.floor(Date.now() / 1000),  // добавили метку времени
     payload: {
       mode: document.querySelector('input[name="mode"]:checked').value,
       date: datePicker.value,
@@ -157,11 +158,11 @@ function finish() {
       count: countInput.value,
       address: addressInput.value || '',
       program: programSel.value,
-      age:     ageSel.value,
-      visits:  visitsSel.value,
+      age: ageSel.value,
+      visits: visitsSel.value,
       occasion: occasionSel.value,
-      extras:  extras,
-      wishes:  document.getElementById('wishes').value.trim()
+      extras: extras,
+      wishes: document.getElementById('wishes').value.trim()
     }
   };
   if (tg) {
