--- a/index.html
+++ b/index.html
@@ -148,26 +148,23 @@
 validateStep(0);
 
 function finish() {
-  const extras = Array.from(document.querySelectorAll('input[name="extras"]:checked')).map(i => i.value);
   const payload = {
-    action: 'booking',
-    timestamp: Math.floor(Date.now() / 1000),  // добавили метку времени
-    payload: {
-      mode: document.querySelector('input[name="mode"]:checked').value,
-      date: datePicker.value,
-      time: timeSelect.value,
-      count: countInput.value,
-      address: addressInput.value || '',
-      program: programSel.value,
-      age: ageSel.value,
-      visits: visitsSel.value,
-      occasion: occasionSel.value,
-      extras: extras,
-      wishes: document.getElementById('wishes').value.trim()
-    }
+    timestamp: Math.floor(Date.now() / 1000),
+    mode: document.querySelector('input[name="mode"]:checked').value,
+    date: datePicker.value,
+    time: timeSelect.value,
+    count: countInput.value,
+    address: addressInput.value || '',
+    program: programSel.value,
+    age: ageSel.value,
+    visits: visitsSel.value,
+    occasion: occasionSel.value,
+    extras: Array.from(document.querySelectorAll('input[name="extras"]:checked')).map(i => i.value),
+    wishes: document.getElementById('wishes').value.trim()
   };
+
   if (tg) {
-    tg.sendData(JSON.stringify(payload));
+    tg.sendData(JSON.stringify({ payload }));
     setTimeout(() => tg.close(), 100);
   } else {
     console.log('Mock sendData', payload);
