--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;">
+  <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <title>Show Today — Бронирование</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <style>
@@ -29,8 +29,8 @@
 <body>
   <div class="wizard">
     <header><img src="logo.png" alt="Show Today"></header>
-    <!-- Форма без изменений -->
-    <div class="step active" data-step="1">
+
+    <div class="step active" data-step="0">
       <h2>1. Выберите формат</h2>
       <label><input type="radio" name="mode" value="studio"> В студии</label>
       <label><input type="radio" name="mode" value="outdoor"> Выезд</label>
@@ -39,45 +39,73 @@
         <button class="btn-next" disabled>Далее →</button>
       </div>
     </div>
-    <!-- Остальные шаги оставлены как есть -->
-    <!-- Шаг 2 -->
-    <div class="step" data-step="2">
+
+    <div class="step" data-step="1">
       <h2>2. Дата и время</h2>
-      <label>Дата: <input id="date-picker" readonly placeholder="– выберите дату –"></label>
-      <label>Время: <select id="time-select"><option value="">– выберите –</option></select></label>
+      <label>Дата: <input id="date-picker" placeholder="– выберите дату –" readonly></label>
+      <label>Время:
+        <select id="time-select">
+          <option value="">– выберите –</option>
+          <option>10:00</option><option>12:00</option><option>14:00</option><option>16:00</option><option>18:00</option>
+        </select>
+      </label>
       <div class="buttons">
         <button class="btn-prev">← Назад</button>
         <button class="btn-next" disabled>Далее →</button>
       </div>
     </div>
-    <!-- Шаг 3 -->
-    <div class="step" data-step="3">
+
+    <div class="step" data-step="2">
       <h2>3. Подробности</h2>
-      <label>Количество: <input type="text" id="count" inputmode="numeric" pattern="\d*" placeholder="1"></label>
-      <label id="address-container" style="display:none;">Адрес: <input type="text" id="address"></label>
-      <label>Программа: <select id="program"><option value="">– выберите –</option><option value="classic">Классика</option><option value="musicality">Музыкалити</option><option value="battle">Battle</option><option value="lotto">Лото</option><option value="kids">Детский</option><option value="quiz">Квиз</option><option value="21plus">21+</option></select></label>
-      <label>Возраст: <select id="age"><option value="">– выберите –</option><option>7-12</option><option>13-17</option><option>18-30</option><option>31-45</option><option>45+</option></select></label>
-      <label>Визиты: <select id="visits"><option value="">– выберите –</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5+</option></select></label>
-      <label>Повод: <select id="occasion"><option value="">– выберите –</option><option>день рождения</option><option>корпоратив</option><option>мальчишник</option><option>девичник</option><option>друзья</option><option>выпускной</option><option>природа</option><option>свадьба</option><option>иное</option></select></label>
+      <label>Сколько человек:
+        <input type="number" id="count-input" placeholder="Например: 12">
+      </label>
+      <label id="address-container" style="display:none;">Адрес выезда:
+        <input type="text" id="address-input" placeholder="Если формат — выезд">
+      </label>
+      <label>Программа:
+        <select id="program-sel">
+          <option value="">– выберите –</option>
+          <option>STAND UP</option>
+          <option>QUIZ</option>
+          <option>SHOWTIME</option>
+        </select>
+      </label>
+      <label>Возраст:
+        <select id="age-sel">
+          <option value="">– выберите –</option>
+          <option>5-7</option><option>8-12</option><option>13-17</option><option>18+</option>
+        </select>
+      </label>
+      <label>Были на ST:
+        <select id="visits-sel">
+          <option value="">– выберите –</option>
+          <option>0</option><option>1</option><option>2+</option>
+        </select>
+      </label>
+      <label>Повод:
+        <select id="occasion-sel">
+          <option value="">– выберите –</option>
+          <option>День рождения</option><option>Корпоратив</option><option>Выпускной</option><option>Другое</option>
+        </select>
+      </label>
       <div class="buttons">
         <button class="btn-prev">← Назад</button>
         <button class="btn-next" disabled>Далее →</button>
       </div>
     </div>
-    <!-- Шаг 4 -->
-    <div class="step" data-step="4">
-      <h2>4. Доп. услуги & пожелания</h2>
-      <div id="extras-container">
-        <label><input type="checkbox" name="extras" value="restroom"> Комната отдыха</label>
-        <label><input type="checkbox" name="extras" value="photographer"> Фотограф</label>
-        <label><input type="checkbox" name="extras" value="videographer"> Видеограф</label>
-        <label><input type="checkbox" name="extras" value="disco"> Дискотека</label>
-      </div>
-      <label>Пожелания:<textarea id="wishes" rows="3" placeholder="…"></textarea></label>
+
+    <div class="step" data-step="3">
+      <h2>4. Доп. услуги и пожелания</h2>
+      <label><input type="checkbox" name="extras" value="restroom"> Комната отдыха</label>
+      <label><input type="checkbox" name="extras" value="photographer"> Фотограф</label>
+      <label><input type="checkbox" name="extras" value="videographer"> Видеограф</label>
+      <label><input type="checkbox" name="extras" value="disco"> Дискотека</label>
+      <label>Пожелания: <textarea id="wishes" rows="3"></textarea></label>
       <div class="buttons">
-  <button class="btn-prev">← Назад</button>
-  <button class="btn-next" id="finish-btn">Записаться</button>
-</div>
+        <button class="btn-prev">← Назад</button>
+        <button id="finish-btn" class="btn-next">Записаться</button>
+      </div>
     </div>
   </div>
 
@@ -87,38 +115,32 @@
     if (tg) tg.ready();
 
     const steps = Array.from(document.querySelectorAll('.step'));
-    const btnNext = steps.map(s => s.querySelector('.btn-next'));
-    const btnPrev = steps.map(s => s.querySelector('.btn-prev'));
-    const datePicker  = document.getElementById('date-picker');
-    const timeSelect  = document.getElementById('time-select');
-    const countInput  = document.getElementById('count');
-    const addressCont = document.getElementById('address-container');
-    const addressInput= document.getElementById('address');
-    const programSel  = document.getElementById('program');
-    const ageSel      = document.getElementById('age');
-    const visitsSel   = document.getElementById('visits');
-    const occasionSel = document.getElementById('occasion');
+    let current = 0;
+
+    const datePicker   = document.getElementById('date-picker');
+    const timeSelect   = document.getElementById('time-select');
+    const countInput   = document.getElementById('count-input');
+    const addressInput = document.getElementById('address-input');
+    const addressCont  = document.getElementById('address-container');
+    const programSel   = document.getElementById('program-sel');
+    const ageSel       = document.getElementById('age-sel');
+    const visitsSel    = document.getElementById('visits-sel');
+    const occasionSel  = document.getElementById('occasion-sel');
 
     flatpickr(datePicker, { dateFormat:'d.m.Y', minDate:'today', onChange:()=>validateStep(1) });
-    for (let h=9; h<=22; h++) ['00','30'].forEach(m=>{
-      if (h===22 && m==='30') return;
-      const opt = document.createElement('option');
-      opt.value = `${h.toString().padStart(2,'0')}:${m}`;
-      opt.textContent = opt.value;
-      timeSelect.append(opt);
-    });
 
-    let current = 0;
     function validateStep(i) {
       let ok = false;
       if (i===0) ok = !!document.querySelector('input[name="mode"]:checked');
       else if (i===1) ok = !!datePicker.value && !!timeSelect.value;
-      else if (i===2) ok = Number(countInput.value)>0 && !!programSel.value && !!ageSel.value && !!visitsSel.value && !!occasionSel.value &&
-                          (addressCont.style.display==='none' || addressInput.value.trim()!=='');
+      else if (i===2) ok = countInput.value && programSel.value && ageSel.value && visitsSel.value && occasionSel.value;
       else if (i===3) ok = true;
-      btnNext[i] && (btnNext[i].disabled = !ok);
+
+      const nextBtn = steps[i].querySelector('.btn-next');
+      if (nextBtn) nextBtn.disabled = !ok;
+
       if (tg && tg.MainButton) {
-        if (i === steps.length - 1) {
+        if (i === 3) {
           tg.MainButton.setText("Записаться").show();
         } else {
           tg.MainButton.hide();
@@ -127,55 +149,60 @@
     }
 
     function showStep(i) {
-      steps.forEach((s,idx)=>s.classList.toggle('active',idx===i));
-      current = i; validateStep(i);
+      steps.forEach((s, idx) => s.classList.toggle('active', idx === i));
+      current = i;
+      validateStep(i);
+
       const mode = document.querySelector('input[name="mode"]:checked')?.value;
-      addressCont.style.display = (mode==='outdoor') ? 'flex' : 'none';
+      addressCont.style.display = (mode === "outdoor") ? 'block' : 'none';
     }
 
-    btnNext.forEach((btn, idx)=> btn?.addEventListener('click', ()=> idx<steps.length-1 ? showStep(idx+1) : null));
-    btnPrev.forEach((btn, idx)=> btn?.addEventListener('click', ()=> idx>0 && showStep(idx-1)));
+    steps.forEach((step, idx) => {
+      const nextBtn = step.querySelector('.btn-next');
+      const prevBtn = step.querySelector('.btn-prev');
+      nextBtn?.addEventListener('click', () => showStep(idx + 1));
+      prevBtn?.addEventListener('click', () => showStep(idx - 1));
+    });
 
-    document.querySelectorAll('input[name="mode"]').forEach(r=> r.addEventListener('change', ()=> validateStep(0)));
-    datePicker.addEventListener('change', ()=> validateStep(1));
-    timeSelect.addEventListener('change', ()=> validateStep(1));
-    countInput.addEventListener('input', ()=> validateStep(2));
-    programSel.addEventListener('change', ()=> validateStep(2));
-    ageSel.addEventListener('change', ()=> validateStep(2));
-    visitsSel.addEventListener('change', ()=> validateStep(2));
-    occasionSel.addEventListener('change', ()=> validateStep(2));
+    document.querySelectorAll('input[name="mode"]').forEach(el => el.addEventListener('change', () => validateStep(0)));
+    datePicker.addEventListener('change', () => validateStep(1));
+    timeSelect.addEventListener('change', () => validateStep(1));
+    countInput.addEventListener('input', () => validateStep(2));
+    programSel.addEventListener('change', () => validateStep(2));
+    ageSel.addEventListener('change', () => validateStep(2));
+    visitsSel.addEventListener('change', () => validateStep(2));
+    occasionSel.addEventListener('change', () => validateStep(2));
 
-validateStep(0);
+    validateStep(0);
 
-function finish() {
-  const payload = {
-    timestamp: Math.floor(Date.now() / 1000),
-    mode: document.querySelector('input[name="mode"]:checked').value,
-    date: datePicker.value,
-    time: timeSelect.value,
-    count: countInput.value,
-    address: addressInput.value || '',
-    program: programSel.value,
-    age: ageSel.value,
-    visits: visitsSel.value,
-    occasion: occasionSel.value,
-    extras: Array.from(document.querySelectorAll('input[name="extras"]:checked')).map(i => i.value),
-    wishes: document.getElementById('wishes').value.trim()
-  };
+    function finish() {
+      const payload = {
+        timestamp: Math.floor(Date.now() / 1000),
+        mode: document.querySelector('input[name="mode"]:checked')?.value,
+        date: datePicker.value,
+        time: timeSelect.value,
+        count: countInput.value,
+        address: addressInput.value || '',
+        program: programSel.value,
+        age: ageSel.value,
+        visits: visitsSel.value,
+        occasion: occasionSel.value,
+        extras: Array.from(document.querySelectorAll('input[name="extras"]:checked')).map(el => el.value),
+        wishes: document.getElementById('wishes').value.trim()
+      };
 
-  if (tg) {
-    tg.sendData(JSON.stringify({ payload }));
-    setTimeout(() => tg.close(), 100);
-  } else {
-    console.log('Mock sendData', payload);
-  }
-}
+      if (tg) {
+        tg.sendData(JSON.stringify({ payload }));
+        setTimeout(() => tg.close(), 100);
+      } else {
+        console.log("Mock payload", payload);
+      }
+    }
 
-document.getElementById('finish-btn')?.addEventListener('click', finish); // <-- СЮДА перенесено
-
-if (tg && tg.MainButton) {
-  tg.MainButton.onClick(finish);
-}
+    document.getElementById('finish-btn').addEventListener('click', finish);
+    if (tg && tg.MainButton) {
+      tg.MainButton.onClick(finish);
+    }
   </script>
 </body>
 </html>
