--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ function finish() {
   }
 }
 
+    document.getElementById('finish-btn').addEventListener('click', finish);
 </script>
 </body>
 </html>
